--- a/my-quiz-folder/join.html
+++ b/my-quiz-folder/join.html
@@ -9,16 +9,16 @@
     <meta name="description" content="Level up your coding skills! Join our student group for HTML5, CSS, and JavaScript lessons, projects, and support.">
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://titilayoafolabi999-ctrl.github.io/student-html-quiz/join.html">
+    <meta property="og:url" content="https://students-quiz.netlify.app/join">
     <meta property="og:title" content="Join our Web Development Study Group">
     <meta property="og:description" content="Master HTML, CSS, and JS. Punctuality and dedication required.">
-    <meta property="og:image" content="https://via.placeholder.com/1200x630.png?text=Web+Dev+Learning+Group">
+    <meta property="og:image" content="https://raw.githubusercontent.com/titilayoafolabi999-ctrl/student-html-quiz/refs/heads/main/my-quiz-folder/file_000000000ec471f5849ef2cbf5e4dce7.png?text=Web+Dev+Learning+Group">
 
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://titilayoafolabi999-ctrl.github.io/student-html-quiz/join.html">
+    <meta property="twitter:url" content="https://students-quiz.netlify.app/join">
     <meta property="twitter:title" content="Join our Web Development Study Group">
     <meta property="twitter:description" content="Master HTML, CSS, and JS with fellow students.">
-    <meta property="twitter:image" content="https://via.placeholder.com/1200x630.png?text=Web+Dev+Learning+Group">
+    <meta property="twitter:image" content="https://raw.githubusercontent.com/titilayoafolabi999-ctrl/student-html-quiz/refs/heads/main/my-quiz-folder/file_000000000ec471f5849ef2cbf5e4dce7.png?text=Web+Dev+Learning+Group">
 
     <link rel="stylesheet" href="style.css">
     <style>
