--- a/my-quiz-folder/join.html
+++ b/my-quiz-folder/join.html
@@ -48,7 +48,7 @@
 
     <div class="container">
         <div class="logo-box">
-            <img src="my-quiz-folder/file_000000000ec471f5849ef2cbf5e4dce7.png" alt="Group Logo">
+            <img src="https://github.com/titilayoafolabi999-ctrl/student-html-quiz/blob/main/my-quiz-folder/file_000000000ec471f5849ef2cbf5e4dce7.png" alt="Group Logo">
         </div>
 
         <h1>Join the Learning Community</h1>
