--- a/my-quiz-folder/join.html
+++ b/my-quiz-folder/join.html
@@ -100,7 +100,7 @@
             <label for="agree" style="font-weight: bold; cursor: pointer;"> I agree to the rules & consequences.</label>
         </div>
 
-        <a href="https://chat.whatsapp.com/YOUR_LINK_HERE" id="joinLink" class="btn-join">Join WhatsApp Now</a>
+        <a href="https://chat.whatsapp.com/IxsPcVxQ5bWKzTrJjwnncf" id="joinLink" class="btn-join">Join WhatsApp Now</a>
 
         <div>
             <a href="index.html" class="back-link">← Return to Quiz Page</a>
